Proptypes package and utf-8 added for Sass

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,7 @@
+@charset "utf-8";
+
 // Following the 7-1 Pattern for SASS structure
+//https://sass-guidelin.es/#architecture
 @import
   'abstracts/variables',
   'abstracts/mixins',
