--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,9 @@
   'base/typography';
 
 @import
-  'components/player';
+  'components/player',
+  'components/log',
+  'components/game-board';
 
 @import
   'layout/header';
@@ -88,37 +90,6 @@
   animation: pulse-text-size 2s infinite ease-out;
 }
 
-#game-board {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
-  margin: 3rem 0;
-  padding: 0;
-  flex-direction: column;
-}
-
-#game-board ol {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
-  margin: 0;
-  padding: 0;
-}
-
-#game-board button {
-  width: 8rem;
-  height: 8rem;
-  border: none;
-  background: #aca788;
-  color: #3f3b00;
-  font-size: 5rem;
-  cursor: pointer;
-  font-family: 'Caprasimo', cursive;
-  padding: 1rem;
-}
-
 #game-over {
   position: absolute;
   top: 0;
@@ -168,25 +139,6 @@
   box-shadow: 0 0 20px rgba(255, 187, 0, 0.8);
 }
 
-#log {
-  max-width: 20rem;
-  color: #3f3b00;
-  list-style: none;
-  margin: 2rem auto;
-  padding: 0;
-  text-align: center;
-}
-
-#log li {
-  border-radius: 4px;
-  animation: slide-in-from-left 1s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
-  margin: 0.75rem;
-}
-
-#log li.highlighted {
-  background-color: #3f3b00;
-  color: white;
-}
 
 #game-hints {
   text-align: center;
