--- a/src/styles/components/_player.scss
+++ b/src/styles/components/_player.scss
@@ -39,3 +39,46 @@
     text-transform: uppercase;
   }
 }
+
+.players {
+  list-style: none;
+  padding: 0;
+  margin: 1rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+
+  li {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    border: 2px solid transparent;
+
+    &.active {
+      border-color: #f6e35a;
+      animation: pulse 2s infinite ease-in-out;
+
+      .player-name,
+      .player-symbol {
+        color: #f6e35a;
+      }
+    }
+  }
+
+  button {
+    width: 3rem;
+    border: none;
+    background: none;
+    color: #c3ba78;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: color 0.2s;
+    padding: 0.5rem 0.25rem 0.25rem 0.25rem;
+    text-align: center;
+    &:hover {
+      color: #f8ca31;
+    }
+  }
+}
+
